--- a/components/idea.html
+++ b/components/idea.html
@@ -7,7 +7,7 @@
   <div>${text}</div>
 </template>
 <script>
-export default (props) => {
-
+export default (props, template) => {
+  //?
 }
 </script>
